--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ts": "nodemon --files --watch 'src/**/*.ts' --exec \"ts-node\" src/server.ts"
+    "ts": "nodemon --files --watch 'src/**/*.ts' --exec \"ts-node\" src/server.ts",
+    "start": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/three": "^0.158.3",
     "express": "^4.18.2",
     "fbx2gltf": "^0.9.7-p1",
     "fs-extra": "^11.1.1",
+    "gltf-builder": "^0.7.1",
     "gltf-pipeline": "^4.1.0",
+    "mkdirp": "^3.0.1",
+    "sharp": "^0.32.6",
+    "three": "^0.158.0",
+    "three-gltf-exporter": "^0.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
@@ -22,6 +29,7 @@
     "@types/draco3d": "^1.4.6",
     "@types/express": "^4.17.18",
     "@types/fs-extra": "^11.0.2",
-    "@types/node": "^20.8.2"
+    "@types/node": "^20.8.2",
+    "ts-node-dev": "^2.0.0"
   }
 }
